# Teach-Niche-Official

./: .coverage  .coveragerc  .env.template  .gitignore  DEVELOPER_GUIDE.md  PROJECT_OVERVIEW.md  README.md  docker-compose.prod.yml  docker-compose.yml  garrett_scratchpad.md  package-lock.json  package.json  pytest.ini  scratchpad.md
backend/: Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/app/core/: config.py
backend/app/routes/: __init__.py  base.py  lessons.py  stripe.py  supabase.py  vimeo.py
backend/app/stripe/: __init__.py  client.py  compliance.py  dashboard.py  onboarding.py  payments.py  payouts.py  webhooks.py
backend/app/supabase/: __init__.py  api.py  auth.py  client.py  edge_functions.py  migrations.py  models.py
backend/app/vimeo/: client.py  upload.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: __init__.py  conftest.py  test_base.py  test_basic.py  test_e2e_flows.py  test_stripe.py  test_supabase.py  test_vimeo.py
frontend/: .eslintrc.json  Dockerfile  Dockerfile.dev  Dockerfile.prod  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/components/: Auth.tsx  Button.tsx  Card.tsx  Footer.tsx  Header.tsx  Hero.tsx  Layout.tsx  LessonCard.tsx  Section.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: chakra.tsx  stripe.ts  supabase.ts
frontend/src/pages/: _app.tsx  (+7 more)
scripts/: cleanup_project.py  seed_lessons.py  test_vimeo_upload.py
specs/: backend_stripe_supabase_integration.md  cleanup.yaml  frontend_stripe_supabase_integration.md  spec_template.md  stripe_integration_prompt.md  stripe_supabase_conn.md  supabase_integration_prompt.md
specs/endpoints/: STRIPE_ENDPOINTS_LIST.md  SUPABASE_ENDPOINTS_LIST.md
tests/: test_stripe_webhooks.py
(+35 files in other folders)
