[project]
name = "backend"
version = "0.1.0"
description = "Backend for Teach Niche"
authors = [
    { name = "Jaymin West", email = "jaymin@teach-niche.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "supabase",
    "python-dotenv", 
    "httpx",
    "stripe",
    "pydantic",
    "flask",
    "pytest",
    "requests",
    "PyVimeo"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
